syntax = "proto3";

package v1api;
option go_package="v1api";

import "drive.proto";

message DrivesRequest {
    string nodeId = 1;
}

message DrivesResponse {
    repeated Drive disks = 1;
}

service HWService {
    rpc GetDrivesList(DrivesRequest) returns (DrivesResponse){};
}
